--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -62,61 +62,27 @@ section, footer, header, aside{
 	vertical-align:middle;
 }
 
+#menu .overlay{
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+}
+
 #menu div.menu-toggle{
 	position: absolute;
 	top: 0px;
 	height: 100%;
-	width: 50%;
 	background-color: #51F0B0;
-	border-width: 2px;
 	margin: 0;
 	transition: all .3s ease-out;
-	z-index:  5;
 }
 
 #menu div.toggle{
 	width: 60px;
 	height: 60px;
-	background-color: #51F0B0;
-}
-
-#menu div#menu-options{
-    left: -50%;
-}
-
-#menu div#menu-options.open{
-    left: 0px;
-}
-
-#menu div#menu-profile{
-    right: -50%;
-}
-
-#menu div#menu-profile.open{
-    right: 0px;
-}
-
-#menu div.toggle button{
-	cursor:pointer;
-	width: 40px;
-	height: 40px;
-	margin: 0px 0px;
-	margin: 5px 5px;
-	text-align:center;
-	vertical-align:middle;
-	background-color:#f0b051;
-}
-
-#menu #menu-options button{
-	float: right;
-}
-
-#menu #menu-profile button{
-	float: left;
-}
-
-#menu div .toggle{
-    background-color: #51F0Ba;
+	background-color: #5aFaB0;
+	border-radius: 5px;
     position: relative;
     transition: all .3s ease-out;
 }
@@ -134,12 +100,68 @@ section, footer, header, aside{
 #menu div#menu-profile .toggle{
     left: -50px;
     float: left;
+    transition: all .3 ease-out;
 }
 
 #menu div#menu-profile .toggle.open{
-    left: 0px;
-    float: left;
+    left: 100%;
+    width: 0;
+    height: 0;
+    padding: 0px;
 }
+
+#menu div#menu-profile .toggle.open button{
+    margin-left: -115px;
+    margin-top: 15px;
+    width: 90px;
+    height: 90px;
+}
+
+#menu div#menu-options{
+	width: 60%;
+    left: -60%;
+}
+
+#menu div#menu-options.open{
+    left: 0px;
+}
+
+#menu div#menu-profile{
+	width: 100%;
+    right: -100%;
+}
+
+#menu div#menu-profile.open{
+    right: 0px;
+}
+
+#menu div.toggle button{
+	cursor:pointer;
+	width: 40px;
+	height: 40px;
+	margin: 0px 0px;
+	margin: 5px 5px;
+	text-align:center;
+	vertical-align:middle;
+	background-color:#f0b051;
+	border-radius: 5px;
+	z-index: 6;
+}
+
+#menu #menu-options button{
+	float: right;
+}
+
+#menu #menu-profile button{
+	float: left;
+}
+
+#menu div#menu-options .options ul{
+	width: 100%;
+	height: 100%;
+	padding: 20% 10%;
+}
+
 
 #menu div#menu-options .options li{
 	cursor:pointer;
