--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,7 +81,7 @@ section, footer, header, aside{
 #menu div.toggle{
 	width: 60px;
 	height: 60px;
-	background-color: #5aFaB0;
+	background-color: #51F0B0;
 	border-radius: 5px;
     position: relative;
     transition: all .3s ease-out;
@@ -120,6 +120,7 @@ section, footer, header, aside{
 #menu div#menu-options{
 	width: 60%;
     left: -60%;
+    height: 350px;
 }
 
 #menu div#menu-options.open{
@@ -159,19 +160,25 @@ section, footer, header, aside{
 #menu div#menu-options .options ul{
 	width: 100%;
 	height: 100%;
-	padding: 20% 10%;
+	padding: 30% 12% 20% 7%;
 }
 
 
 #menu div#menu-options .options li{
 	cursor:pointer;
-	width: 100px;
-	height: 30px;
-	margin: 0px 0px;
-	margin: 5px 5px;
+	width: 90%;
+	height: 50px;
+	margin: 10px 10px;
+	padding: 10px 10px;
 	text-align:center;
 	vertical-align:middle;
 	background-color:#000000;
-	color: #ffffff;
+	list-style-type: none;
+	border-radius: 5px;
 }
+
+#menu div#menu-options .options li a{
+	color: #FFFFFF
+}
+
 
