--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -273,6 +273,11 @@ button:after{
 	display:  inline-block;
 }
 
+.popup-page button i{
+	width: 100%;
+	height: 100%;
+}
+
 /*=======================================*/
 
 #pages{
