--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -64,8 +64,14 @@ button:after{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	z-index:  4;
 }
+
+#menu .menu-component{
+	/* all physical menu components start at 3 height*/
+	z-index: 3;
+}
+
+/* THE MENU BAR    */
 
 #menu #menu-bar{
 	/* The actual menu */
@@ -73,7 +79,7 @@ button:after{
 	background-color: #000000;
 }
 
-#menu div.menu-div{
+#menu #menu-title{
 	position: relative;
 	display: inline-block;
 	top: 0px;
@@ -89,14 +95,10 @@ button:after{
 	vertical-align:middle;
 }
 
-#menu .overlay{
-	position: absolute;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-}
+/*========OPTIONS and PROFILE=========== */
 
-#menu div.menu-toggle{
+#menu .menu-toggle{
+	/*container for button*/
 	position: absolute;
 	top: 0px;
 	height: 100%;
@@ -105,26 +107,34 @@ button:after{
 	transition: all .3s ease-out;
 }
 
-/* menu options */
+/* #menu #options */
+#menu #options .catch{
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 2.5;
+}
 
-#menu div#menu-options{
+/* #menu-options */
+#menu #menu-options{
 	width: 60%;
     left: -60%;
     height: 350px;
 }
 
-#menu div#menu-options.open{
+#menu #menu-options.open{
     left: 0px;
 }
 
-#menu div#menu-options .options ul{
+#menu #menu-options .options ul{
 	width: 100%;
 	height: 100%;
 	padding: 30% 12% 20% 7%;
 }
 
 
-#menu div#menu-options .options li{
+#menu #menu-options .options li{
 	cursor:pointer;
 	width: 90%;
 	height: 50px;
@@ -137,20 +147,19 @@ button:after{
 	border-radius: 5px;
 }
 
-#menu div#menu-options .options li a{
+#menu #menu-options .options li a{
 	color: #FFFFFF
 }
 
 /*   menu profile   */
-
-#menu div#menu-profile{
+#menu #menu-profile{
     height: 100%;
 	width: 100%;
     right: -100%;
     overflow: hidden;
 }
 
-#menu div#menu-profile.open{
+#menu #menu-profile.open{
     right: 0px;
 }
 
@@ -158,14 +167,14 @@ button:after{
     height: 100%;
     overflow: hidden;
 }
+
 #menu #menu-profile.open .profile{
     height: 100%;
-    overflow: visible;
 }
 
 /* Toggle icons for both */
 
-#menu div.toggle{
+#menu .toggle{
 	width: 60px;
 	height: 60px;
 	background-color: #51F0B0;
@@ -174,18 +183,18 @@ button:after{
     transition: all .3s ease-out;
 }
 
-#menu div#menu-options .toggle{
+#menu #menu-options .toggle{
     right: -50px;
     float: right;
 }
 
-#menu div#menu-options .toggle.open{
+#menu #menu-options .toggle.open{
     right: 0px;
     float: right;
 }
 
 #menu #toggle-profile{
-    right: 0;
+    right: -10px;
     top:0;
     float: right;
     transition: all .3 ease-out;
@@ -193,6 +202,7 @@ button:after{
 }
 
 #menu #toggle-profile.open{
+	display: none;
 }
 
 #menu #toggle-profile.open button{
@@ -307,7 +317,7 @@ button:after{
 	margin-top: 70px;
 	margin-left: -25%;
 	position: absolute;
-	z-index: 3;
+	z-index: 2;
 	-moz-transition: 	width .28s cubic-bezier(.4,0,.2,1);
 	-webkit-transition: width .28s cubic-bezier(.4,0,.2,1);
 	transition: 		width .28s cubic-bezier(.4,0,.2,1);
