--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -9,13 +9,16 @@
 	margin-left: -45%;
 	left: 50%;
 	top: 60px;
-	background-color: #addddd;
+}
+
+#list-container #trails{
+	position: relative;
+	height: 10%;
 }
 
 #list-container li{
-	position: absolute;
 	cursor:pointer;
-	width: 90%;
+	width: 50%;
 	height: 10px;
 	margin: 10px 10px;
 	padding: 10px 10px;
