--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -93,7 +93,7 @@ button a{
 #menu #menu-title{
 	position: relative;
 	display: inline-block;
-	top: 0px;
+	top: 30%;
 	height: 100%;
 	width: 10%;
 	margin: 0 40%;
