--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -17,6 +17,10 @@
 	background-color : transparent
 }
 
+.hidden{
+	display: none;
+}
+
 @import url(http://fonts.googleapis.com/css?family=Lato:300|Ubuntu:300);
 
 
@@ -318,18 +322,11 @@ button a{
 	margin: 9% 0;
 }
 
-.popup-page .option .button, .popup-page .option h4{
+.popup-page .option button, .popup-page .option h4{
 	display:  inline-block;
 }
 
-#type-page .button {
-	width: 80%;
-	height: 10%;
-	background-color: #f0b051;
-	border-radius: 5px;
-}
-
-.popup-page .button i{
+.popup-page button i{
 	width: 100%;
 	height: 100%;
 }
@@ -353,17 +350,15 @@ button a{
 /*=============MAP=============*/
 
 .map-container {
-	top: 0px;
 	width: 100%;
 	height: 200px;
 	background: #3d4e5b;
 	margin-top: 60px; /*against the menu*/
 	position: absolute;
 	z-index: 2;
-	transition: all .3s ease-out;
+	-moz-transition: 	width .28s cubic-bezier(.4,0,.2,1);
+	-webkit-transition: width .28s cubic-bezier(.4,0,.2,1);
+	transition: 		width .28s cubic-bezier(.4,0,.2,1);
 	display: block;
 }
 
-.map-container.hide {
-	top: 10px;
-}
