--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -7,6 +7,15 @@
 	min-height: 0 !important;
 }
 
+/*
+		Testing
+*/
+
+.red{
+	background-color: #FF0000;
+}
+
+
 /*-------------------------
 	General Styles
 --------------------------*/
@@ -292,6 +301,14 @@ button a{
 	width: 100%;
 	height: 100%;
 	border-radius: 0;
+}
+
+#start-page button{
+	width: 60px;
+}
+
+#start-page input{
+	width: 100px;
 }
 
 #type-page{
