--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -404,6 +404,7 @@ li{
 .map-container {
 	width: 100%;
 	height: 100%;
+	margin-top: 60px;
 	background: #3d4e5b;
 	position: absolute;
 	z-index: 2;
