--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -137,7 +137,7 @@ li{
 /* #menu #options */
 #menu .catch{
 	position: absolute;
-	background-color: #7accc8;
+	background-color: #A8A8A8; /*#9E9E9E*/
 	opacity: .5;
 	top: 0px;
 	width: 100%;
@@ -159,28 +159,38 @@ li{
 #menu #menu-options .options ul{
 	width: 100%;
 	height: 100%;
-	padding: 30% 12% 20% 7%;
+	padding: 30% 0% 20% 0%;
 }
 
 
 #menu #menu-options .options li{
 	cursor:pointer;
-	width: 90%;
-	height: 50px;
-	margin: 10px 10px;
-	padding: 10px 10px;
-	text-align:center;
-	vertical-align:middle;
-	background-color:#62aca8;
+	width: 100%;
 	list-style-type: none;
-	border-radius: 5px;
+	font-size: 1.2em;
+	/*height: 50px;
+	margin: 10px 10px;*/
+	/*padding: 1em 0em 0.1em 0em;*/
+	/*text-align:center;
+	vertical-align:middle;*/
+	/*background-color:#62aca8;*/
+	/*border-radius: 5px;*/
 }
 
 #menu #menu-options .options li a{
-	color: #FFFFFF
+	color: #FFFFFF;
+	background-color: rgb(4, 102, 94);
+	padding: 1em 0em 1em 0.5em;
+	display: block;
+	border-bottom: 1px solid #33A89F;
+
 }
 
-/*   menu profile   */
+#menu #menu-options .options li a:hover{
+	background-color: rgb(98, 179, 172);
+}
+
+/*menu profile   */
 #menu #menu-profile{
     height: 100%;
 	width: 100%;
@@ -257,6 +267,7 @@ li{
 	vertical-align:middle;
 	background-color:#7accc8;
 	border-radius: 5px;
+	border: 1px solid #00746B;
 }
 
 #menu #menu-options button{
@@ -297,7 +308,7 @@ li{
 	opacity: 1;
 	position:fixed;
 	text-align:center;
-	box-shadow: 0 1px 7px 0 rgba(0,0,0,0.2);
+	box-shadow: 0 1px 7px 0 rgba(0,0,0,0.37);
 	z-index: 6;
 }
 
@@ -331,11 +342,29 @@ li{
 }
 
 #start-page button{
-	width: 60px;
+	width: 40%;
+	height: 40px;
+	margin: 1.25em 0em 0em 0em;
+	border: 1px solid #A0A0A0;
+	background-color: rgba(0,0,0,0);
+	color: #fff;
+}
+
+#start-page button:hover{
+	background-color: #59A99D;
+	border: 1px solid #59A99D;
 }
 
 #start-page input{
-	width: 100px;
+	outline: 0;
+	width: 100%;
+	padding: 1.4em;
+	height: 2em;
+	background-color: rgba(0,0,0,0);
+	color: #fff;
+	border: 1px solid #3CF0C1;
+	display: block;
+	font-size: 1em;
 }
 
 #type-page{
@@ -344,7 +373,7 @@ li{
 	border-radius: 4px;
 	margin-left: -40%;
 	left: 50%;
-	bottom: 7%;
+	bottom: 35%;
 }
 
 .catch.type{
@@ -373,8 +402,13 @@ li{
 #type-page .button {
 	width: 80%;
 	height: 10%;
-	background-color: #f0b051;
+	background-color: #ddd;
 	border-radius: 5px;
+	padding: 0.5em 0em 0.5em 0em;
+}
+
+#type-page .button:hover{
+	background-color: #ABDAD6;	
 }
 
 .popup-page .button i{
