--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -4,10 +4,8 @@
 
 #list-container{
 	position: absolute;
-	width: 90%;
+	width: 100%;
 	height: 100%;
-	margin-left: -45%;
-	left: 50%;
 	top: 60px;
 }
 
@@ -16,15 +14,18 @@
 	height: 10%;
 }
 
-#list-container li{
+#list-container li a{
 	cursor:pointer;
-	width: 50%;
-	height: 10px;
-	margin: 10px 10px;
-	padding: 10px 10px;
-	text-align:center;
-	vertical-align:middle;
-	background-color:#000000;
+	margin: 0em;
+	padding: 1em 0em 0.93em 0.5em;
+	text-align:left;
+	background-color:#EFEFEF;
 	list-style-type: none;
-	border-radius: 5px;
+	border-bottom: 1px solid #AEACAC;
+	font-size: 1.3em;
+	display: block;
+}
+
+#list-container li a:hover{
+	background-color: rgb(193, 228, 226);
 }
