--- a/assets/css/trails.css
+++ b/assets/css/trails.css
@@ -17,7 +17,7 @@
 
 #trail #trail-menu{
 	position: absolute;
-	background-color: #000000;
+	background-color: #00413c;
 	width: 100%;
 	height: 60px;
 	bottom: 0;	
