--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -126,11 +126,11 @@ li{
 	position: absolute;
 	top: 0px;
 	height: 100%;
-	background-color: #00746b;
+	background-color: #06302D;
 	margin: 0;
 	transition: all .5s ease-out;
 	border: 0px;
-	border-color: #308f69;
+	/*border-color: #308f69;*/
 	border-style: solid;
 }
 
@@ -162,27 +162,19 @@ li{
 	padding: 30% 0% 20% 0%;
 }
 
-
 #menu #menu-options .options li{
 	cursor:pointer;
 	width: 100%;
 	list-style-type: none;
 	font-size: 1.2em;
-	/*height: 50px;
-	margin: 10px 10px;*/
-	/*padding: 1em 0em 0.1em 0em;*/
-	/*text-align:center;
-	vertical-align:middle;*/
-	/*background-color:#62aca8;*/
-	/*border-radius: 5px;*/
 }
 
 #menu #menu-options .options li a{
 	color: #FFFFFF;
-	background-color: rgb(4, 102, 94);
+	background-color: rgb(16, 69, 65);
 	padding: 1em 0em 1em 0.5em;
 	display: block;
-	border-bottom: 1px solid #33A89F;
+	border-bottom: 1px solid #629894;
 }
 
 #menu #menu-options .options li a:hover{
@@ -225,7 +217,7 @@ li{
 #menu .toggle{
 	width: 60px;
 	height: 55px;
-	background-color: #00746b;
+	/*background-color: #00746b;*/
 	border-radius: 5px;
     position: relative;
     transition: all .3s ease-out;
@@ -267,7 +259,7 @@ li{
 	vertical-align:middle;
 	background-color:#7accc8;
 	border-radius: 5px;
-	border: 1px solid #00746B;
+	border: 1px solid #00413c;
 }
 
 #menu #menu-options button{
@@ -369,7 +361,7 @@ li{
 
 #type-page{
 	width: 80%;
-	height: 250px;
+	/*height: 250px;*/
 	border-radius: 4px;
 	margin-left: -40%;
 	left: 50%;
@@ -397,6 +389,11 @@ li{
 
 .popup-page .option .button, .popup-page .option h4{
 	display:  inline-block;
+}
+
+#type-page h2 {
+	color: #676767;
+	font-size: 1.5em;
 }
 
 #type-page .button {
