--- a/assets/css/trails.css
+++ b/assets/css/trails.css
@@ -4,15 +4,50 @@
 
 #trail-container{
 	position: absolute;
-	width: 90%;
+	width: 100%;
 	height: 100%;
-	margin-left: -45%;
-	left: 50%;
-	top: 60px;
 }
 
-#trail h1, #trail h3{
-	color: #000000;
+#trail h1{
+	color: #747474;
+	margin: 0em;
+	padding: 0.5em 0em 0em 0.5em;
+	font-size: 2em;
+}
+
+#trail h4{
+	background-color: #fff;
+	color: #4C4A4A;
+	display: inline-block;
+	border-radius: 2px;
+	border: 1px solid #C8C8C8;
+	padding: 0.5em;
+	margin: 1.5em 0em 0em 0.5em;
+}
+
+#trail p {
+	color: #4C4A4A;
+	padding: 1em 1.5em 0em 0.5em;
+	font-size: 1em;
+	/*text-align: justify;*/
+}
+
+#trail img {
+	width: 100%;
+	height: 30%;
+}
+
+/*#trail #trail-bglayer {
+	background-color: rgba(248, 247, 216, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+*/
+#trail #trail-card {
+	margin: -1em 0em 0em 0.5em;
 }
 
 #trail #trail-menu{
