--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -7,6 +7,7 @@
 	width: 100%;
 	height: 100%;
 	top: 60px;
+	background-color: #EFEFEF; 
 }
 
 #list-container #trails{
@@ -22,10 +23,19 @@
 	background-color:#EFEFEF;
 	list-style-type: none;
 	border-bottom: 1px solid #AEACAC;
-	font-size: 1.3em;
+	font-size: 1.2em;
 	display: block;
 }
 
 #list-container li a:hover{
 	background-color: rgb(193, 228, 226);
+}
+
+@media only screen and (orientation: landscape) {
+	#list-container li a{
+	cursor:pointer;
+	margin: 0.3em 0em 0em 0em;
+	padding: 0.6em 0em 0em 0.5em;
+	display: block;
+	}
 }
