--- a/assets/css/trails.css
+++ b/assets/css/trails.css
@@ -9,8 +9,8 @@
 }
 
 #trail h1{
-	color: #747474;
-	margin: 0em;
+	color: #565353;
+	margin: 0em 0em 0em 0em;
 	padding: 0.5em 0em 0em 0.5em;
 	font-size: 2em;
 }
@@ -22,14 +22,15 @@
 	border-radius: 2px;
 	border: 1px solid #C8C8C8;
 	padding: 0.5em;
-	margin: 1.5em 0em 0em 0.5em;
+	margin: 1em 0em 0em 0.5em;
+	font-size: 1em;
+
 }
 
 #trail p {
 	color: #4C4A4A;
 	padding: 1em 1.5em 0em 0.5em;
 	font-size: 1em;
-	/*text-align: justify;*/
 }
 
 #trail img {
@@ -37,17 +38,8 @@
 	height: 30%;
 }
 
-/*#trail #trail-bglayer {
-	background-color: rgba(248, 247, 216, 0.7);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-*/
 #trail #trail-card {
-	margin: -1em 0em 0em 0.5em;
+	margin: 0em 0em 0em 0.5em;
 }
 
 #trail #trail-menu{
@@ -74,4 +66,8 @@
 
 #trail #trail-menu .button-holder#holder-x{
 	float: left;
+}
+
+@media only screen and (orientation: landscape) {
+
 }
