--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -7,7 +7,7 @@
 	width: 100%;
 	height: 100%;
 	top: 60px;
-	background-color: #EFEFEF; 
+	background-color:#EFEFEF;
 }
 
 #list-container #trails{
@@ -18,7 +18,7 @@
 #list-container li a{
 	cursor:pointer;
 	margin: 0em;
-	padding: 1em 0em 0.43em 0.5em;
+	padding: 1em 0em 0.66em 0.5em;
 	text-align:left;
 	background-color:#EFEFEF;
 	list-style-type: none;
@@ -34,8 +34,9 @@
 @media only screen and (orientation: landscape) {
 	#list-container li a{
 	cursor:pointer;
-	margin: 0.3em 0em 0em 0em;
-	padding: 0.6em 0em 0em 0.5em;
+	margin: 0.4em 0em 0em 0em;
+	padding: 0.5em 0em 0em 0.5em;
 	display: block;
-	}
+	font-size: 1.2em;
+}
 }
