--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -1,11 +1,11 @@
 #list{
-	padding-top: 60px;
+	top: 60px;
+	transition: all .7s ease-in;
 }
 
 #list-container{
 	position: absolute;
 	width: 100%;
-	height: 100%;
 	top: 60px;
 	background-color:#EFEFEF;
 }
@@ -38,5 +38,5 @@
 	padding: 0.5em 0em 0em 0.5em;
 	display: block;
 	font-size: 1.2em;
-}
+	}
 }
