trail popup styled

--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -1,5 +1,6 @@
 #list{
 	top: 60px;
+	background: #EAEAEA;
 }
 
 #list-container{
@@ -16,14 +17,15 @@
 
  #list-container li a{
  	cursor:pointer;
-	margin: 0.5em 0.5em 0em 0.5em;
+	margin: 0em; /*0.5em 0.5em 0em 0.5em;*/
 	padding: 1em 0em 0.66em 0.5em;
 	text-align:left;
 	list-style-type: none;
-	border: 1px solid #AEACAC;
+	border-bottom: 1px solid #AEACAC;
 	font-size: 1.2em;
 	display: block; 
-	border-radius: 0.15em;
+	/*border-radius: 0.15em;*/
+	background-color:#EAEAEA;
  }
 
 
@@ -76,11 +78,20 @@
 
 
 @media only screen and (orientation: landscape) {
-	#search, #list-container li a{
-	cursor:pointer;
-	margin: 0.4em 0em 0em 0em;
-	padding: 0.5em 0em 0em 0.5em;
-	display: block;
-	font-size: 1.2em;
+	#list-container li a{
+		cursor:pointer;
+		margin: 0.4em 0em 0em 0em;
+		padding: 0.5em 0em 0em 0.5em;
+		display: block;
+		font-size: 1.2em;
+	}
+
+	#list-container {
+		top: 60px;
+	
+	}
+
+	#src {
+		width:  81%;
 	}
 }
