--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -418,6 +418,10 @@ li{
 	bottom: 29%;
 }
 
+.popup-pgtr{
+	bottom: 15%;
+}
+
 .popup-page .options .option{
 	margin: 9% 0;
 }
@@ -439,6 +443,11 @@ li{
 	padding: 0.5em 0em 0.5em 0em;
 }
 
+.popup-page .button1 {
+	width: 100%;
+	border-radius: 0px;
+}
+
 .popup-page .button:hover{
 	background-color: #ABDAD6;	
 }
@@ -446,6 +455,12 @@ li{
 .popup-page .button i{
 	width: 100%;
 	height: 100%;
+}
+
+#trail-img {
+	width: 100%;
+	margin: 0em;
+	height: 10em;
 }
 
 /*=======================================*/
@@ -488,8 +503,19 @@ li{
 		margin-left: -35%;
 		left: 50%;
 	}	
+
+	.popup-pgtr{
+		bottom: 9%;
+		left: 52%;
+		width: 66%;
+	}
+
 	.popup-page .options .option {
 		margin: 6% 0;
+	}
+
+	#trail-img {
+	height: 0em;
 	}
 
 	#menu #menu-profile .profile .left-container{
