--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -7,7 +7,6 @@
 	position: absolute;
 	width: 100%;
 	top: 60px;
-	/*background-color:#EFEFEF;*/
 	transition: all .4s ease-in;
 }
 
@@ -17,14 +16,13 @@
 
  #list-container li a{
  	cursor:pointer;
-	margin: 0em; /*0.5em 0.5em 0em 0.5em;*/
+	margin: 0em; 
 	padding: 1em 0em 0.66em 0.5em;
 	text-align:left;
 	list-style-type: none;
 	border-bottom: 1px solid #AEACAC;
 	font-size: 1.2em;
 	display: block; 
-	/*border-radius: 0.15em;*/
 	background-color:#EAEAEA;
  }
 
@@ -64,7 +62,6 @@
 	color: #6F6F6F;
 	font-size: 1em;
 	padding: 0.25em 0em 0.25em 0em;
-	/*border: 1px solid #AEACAC;*/
 }
 
 #src {
@@ -73,7 +70,6 @@
 	color: #6F6F6F;
 	font-size: 1em;
 	width: 74%;
-	/*border: 1px solid #AEACAC;*/
 }
 
 
